Rename Path parameters
Renames the following parameters:
- bna_id -> rating_id
- id -> price_id
